Orbit based ephemeris solver introduced